2008-01-18  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: Cache tags into a hash table and see if they
	  had been previously cached before looking for them again.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/StaticLibraryCProject.xpt.xml,
	  templates/StaticLibraryCppProject.xpt.xml,
	  templates/EmptyCProject.xpt.xml, templates/EmptyCSourceFile.xft.xml,
	  templates/EmptyCppProject.xpt.xml, templates/EmptyCppSourceFile.xft.xml,
	  templates/ConsoleCProject.xpt.xml, templates/ConsoleCppProject.xpt.xml,
	  templates/EmptyCHeaderFile.xft.xml,
	  templates/EmptyCppHeaderFile.xft.xml,
	  templates/SharedLibraryCProject.xpt.xml,
	  templates/SharedLibraryCppProject.xpt.xml: Make template categories
	  translatable.

2008-01-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: Only lock the parsingJobs queue object.

2008-01-11  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: When searching for a tag instead of doing a
	  linear search do a binary search (ctags output sorted tag files).
	  Greatly improves parsing speed. Also removed some unused methods.

2008-01-08  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs: Make sure packages are not repeated if the
	  system has more than one copy of the same package in different
	  directories.
	* Parser/TagDatabaseManager.cs: Changed the name of a propery.

2008-01-07  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Deploy resources in the correct way.

2008-01-04  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/TagDatabaseManager.cs: Only try to parse tags if ctags and gcc are
	  installed.

2007-12-31  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Report errors in the same order as they were
	  outputted by the compiler and parse linker output to form better linker
	  error reports.
